18543
{code}
scala> var f: Int => Unit = _ => ()

<console>:1: error: ';' expected but '=>' found.
       var f: Int => Unit = _ => ()
                              ^
{code}
This is due to the relevant chunk of parsing code being pure heuristic.
{code}
scala> val f: Int => Unit = _ => ()
f: Int => Unit = <function1>
{code}
